<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResumeCart">

    <TextView
        android:id="@+id/textViewCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_cart"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonBack"
        style="@style/Widget.Cashback.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="79dp"
        android:layout_marginRight="79dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorSecondaryLight"
        android:padding="10dp"
        android:text="@string/action_back_products"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonEmpty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonPayment" />

    <Button
        android:id="@+id/buttonEmpty"
        style="@style/Widget.Cashback.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorSecondaryLight"
        android:padding="10dp"
        android:text="@string/action_cart_empty"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.71"
        app:layout_constraintStart_toEndOf="@+id/buttonBack"
        app:layout_constraintTop_toBottomOf="@+id/buttonPayment" />

    <Button
        android:id="@+id/buttonPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/action_payment_proceed"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2"
        app:layout_constraintVertical_bias="0.8" />

    <ScrollView
        android:id="@+id/cartScrollView"
        android:layout_width="412dp"
        android:layout_height="286dp"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toTopOf="@id/tableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCart"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/cartScrollLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="346dp"
        android:layout_height="45dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@id/tableRow2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cartScrollView">

        <TextView
            android:id="@+id/textTotalHt"
            android:layout_width="237dp"
            android:layout_height="match_parent"
            android:padding="15px"
            android:text="@string/label_total_ht"
            android:textColor="@color/textColorPrimary"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/numberTotalHt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="numberDecimal" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="346dp"
        android:layout_height="45dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/border"
        app:layout_constraintBottom_toTopOf="@id/buttonPayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textTotalTtc"
            android:layout_width="237dp"
            android:layout_height="match_parent"
            android:padding="15px"
            android:text="@string/label_total_ttc"
            android:textColor="@color/textColorPrimary"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/numberTotalTtc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="numberDecimal" />
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>